--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,15 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'Helvetica Neue',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://i.redd.it/c5jb4d6mn0ky.png");
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 code {
