--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -32,4 +32,6 @@ font-family: pokemon;
 }
 .h1nombre{
     text-decoration:double;
+    background-color: rgba(128, 128, 128, 0.425);
+    border-radius: 5px;
 }
