--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -1,21 +1,75 @@
-.container {
+.detailContainer {
+    overflow: hidden;
+    flex-direction: column;
+    height: 70%;
+    width: 70%; 
+    align-items: center;
+    justify-content: center;
+    margin:0 auto;
+    width: 500px;
     display:flex;
-    justify-content:center;
-        /* border:1px solid rgb(10, 9, 9); */
-    max-width: 90vw;
-    max-height: 80vw ;
-    font-family:  sans-serif;
-                                                
-        
+    position:relative;
+    top:80px;
+    } 
+
+.nameContainer{
+    display:flex;
+    flex-direction: column;
+    height: 10%;
+    width: 500px;
+    background-color: #dddf66; 
+    overflow: hidden;
+    border-radius: 20px;
+    border-style:groove;
+    justify-content: center;
+}
+
+.imagenyData{
+    display:flex;
+    flex-direction: row;
+    height: 100%;
+    background-color: #86bace50; 
+    justify-content:flex-end;
+    align-items: center; 
+    border-radius: 20px;  
+    width: 500px; 
+    border-style:groove;
+}
+.imagenDetail{
+    left:2px;
+    width: 50%;
+    align-self: center;
+}
+
+.imagenDetail img {
+    width: 100%;
 }
 .data{
-    margin:100px;
-}
-.data h2{
-    font-size: large;}
-
-
-.imagenDetail{
-/* border:1px solid black; */
+/* background-color: aqua; */
 width: 50%;
+height: 100%;
+display:flex;
+flex-direction: column;
+justify-content: space-between;
 }
+.data p{
+    font-size:20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button{
+    background:#dddf66;
+    padding: 10px;
+    border:none;
+    border-radius: 10px;
+    height: 40px;
+    width: 100px;
+    font-size: 18px;
+    align-items: center;
+    justify-content:center;
+    cursor:pointer;
+    margin:10px;
+    }
+
+
